// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadingElementForLevel should render a h1 1`] = `
<h1
  className="headingElementForLevel a class"
>
  A Heading
</h1>
`;

exports[`HeadingElementForLevel should render a h2 1`] = `
<h2
  className="headingElementForLevel a class"
>
  A Heading
</h2>
`;

exports[`HeadingElementForLevel should render a h3 1`] = `
<h3
  className="headingElementForLevel a class"
>
  A Heading
</h3>
`;

exports[`HeadingElementForLevel should render a h4 1`] = `
<h4
  className="headingElementForLevel a class"
>
  A Heading
</h4>
`;

exports[`HeadingElementForLevel should render a h5 1`] = `
<h5
  className="headingElementForLevel a class"
>
  A Heading
</h5>
`;

exports[`HeadingElementForLevel should render a h6 1`] = `
<h6
  className="headingElementForLevel a class"
>
  A Heading
</h6>
`;
